# libgnomeui

./: .cvsignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  acconfig.h  aclocal.m4  autogen.sh  config.h.in  configure  configure.in  libgnomeui-zip.in  libgnomeui.doap  message-of-doom
components/: .cvsignore  ChangeLog  GNOME_UI_Components.oaf.in  Makefile.am  libgnomeui-components.c
demos/: .cvsignore  ChangeLog  Makefile.am  Makefile.in  animator_demo.c  dock_demo.c  mdi_demo.c  stock_demo.c  test-file-saver.c  test-recently-used.c  winhints_demo.c
doc/: ChangeLog  Makefile.in  Porting-1.0-2.0.txt
doc/reference/: .cvsignore  Makefile.am  Makefile.in  libgnomeui-docs.sgml  libgnomeui-sections.txt  libgnomeui.types
doc/reference/tmpl/: .cvsignore  gnome-about.sgml  gnome-app-helper.sgml  gnome-app-util.sgml  gnome-app.sgml  gnome-appbar.sgml  gnome-authentication.sgml  gnome-client.sgml  gnome-color-picker.sgml  gnome-dateedit.sgml  gnome-dialog-util.sgml  gnome-dialog.sgml  gnome-druid-page-edge.sgml  gnome-druid-page-standard.sgml  gnome-druid-page.sgml  gnome-druid.sgml  gnome-entry.sgml  gnome-file-entry.sgml  gnome-font-picker.sgml  gnome-gconf-ui.sgml  gnome-href.sgml  gnome-ice.sgml  gnome-icon-entry.sgml  gnome-icon-item.sgml  gnome-icon-list.sgml  gnome-icon-lookup.sgml  gnome-icon-sel.sgml  gnome-icon-theme.sgml  gnome-macros.sgml  gnome-marshal.sgml  gnome-mdi-child.sgml  gnome-mdi-generic-child.sgml  gnome-mdi-session.sgml  gnome-mdi.sgml  gnome-messagebox.sgml  gnome-multi-screen.sgml  gnome-password.sgml  gnome-pixmap-entry.sgml  gnome-pixmap.sgml  gnome-popup-menu.sgml  (+17 more)
file-chooser/: ChangeLog  Makefile.am  gtkfilesystemgio.c  gtkfilesystemgio.h  gtkfilesystemgnomevfs.c  gtkfilesystemgnomevfs.h  prop-editor.c  sucky-desktop-item.c  sucky-desktop-item.h  testfilechooser.c
glade/: Makefile.am  Makefile.in  glade-gnome.c
gnome-2-20/: README  autogen.sh  configure.in  libgnomeui-zip.in
gnome-2-20/demos/: animator_demo.c  mdi_demo.c  test-recently-used.c
gnome-2-20/doc/reference/: libgnomeui-sections.txt
gnome-2-20/doc/reference/tmpl/: gnome-about.sgml  gnome-app-util.sgml  gnome-app.sgml  gnome-client.sgml  gnome-color-picker.sgml  gnome-dialog-util.sgml  gnome-dialog.sgml  gnome-druid-page-standard.sgml  gnome-druid-page.sgml  gnome-file-entry.sgml  gnome-href.sgml  (+20 more)
gnome-2-20/file-chooser/: Makefile.am  prop-editor.c  prop-editor.h
gnome-2-20/glade/: Makefile.am
gnome-2-20/images/: Makefile.am
gnome-2-20/libgnomeui/: 0ChangeLog.2003  Makefile.am  gnome-app-helper.h  gnome-app-util.c  gnome-app-util.h  gnome-app.c  gnome-appbar.c  gnome-authentication-manager.c  gnome-client.h  gnome-color-picker.c  gnome-dateedit.h  gnome-dialog.h  gnome-druid-page-edge.c  gnome-druid-page-edge.h  gnome-druid-page-standard.c  gnome-druid-page.c  gnome-druid.c  gnome-druid.h  gnome-file-entry.c  gnome-font-picker.c  gnome-gconf-ui.c  gnome-gconf-ui.h  gnome-icon-entry.c  gnome-icon-item.h  gnome-icon-list.h  gnome-icon-lookup.c  gnome-icon-sel.c  gnome-icon-theme.h  gnome-marshal-main.c  gnome-mdi-generic-child.c  gnome-mdi-session.c  gnome-messagebox.c  gnome-multiscreen.c  gnome-password-dialog.h  gnome-pixmap-entry.h  gnome-pixmap.h  gnome-propertybox.c  gnome-scores.c  gnome-scores.h  gnome-stock-icons.c  (+13 more)
gnome-2-20/libgnomeui/pixmaps/: copyright.txt
gnome-2-20/po/: LINGUAS  POTFILES.in  af.po  be@latin.po  bn.po  ca.po  da.po  dz.po  el.po  eo.po  es.po  et.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  ka.po  kn.po  lt.po  mg.po  mk.po  mr.po  ms.po  nb.po  pa.po  pl.po  pt.po  pt_BR.po  ru.po  rw.po  si.po  sk.po  sl.po  sq.po  (+8 more)
gnome-2-20/test-gnome/: test-password-dialog.c  testdruid.c  testgnome.h  testgnome.xml  testiconlist.c
gnome-2-20/tests/: test-libglade-gnome-noupgrade.c  test-libglade-gnome.c
images/: .cvsignore  Makefile.am  Makefile.in
libgnomeui/: .cvsignore  ChangeLog  ChangeLog-19990928  DEPENDS.libgnomeui  Makefile.am  Makefile.in  TODO  animator_demo.c  dock_demo.c  gnome-about.c  gnome-about.h  gnome-actionarea.c  gnome-actionarea.h  gnome-animator.c  gnome-animator.h  gnome-app-helper.c  gnome-app-helper.h  gnome-app-util.c  gnome-app-util.h  gnome-app.c  gnome-app.h  gnome-appbar.c  gnome-appbar.h  gnome-appsmenu.c  gnome-appsmenu.h  gnome-authentication-manager-private.h  gnome-authentication-manager.c  gnome-authentication-manager.h  gnome-boxed.defs  gnome-calculator.c  gnome-calculator.h  gnome-canvas-image.c  gnome-canvas-image.h  gnome-canvas-init.c  gnome-canvas-init.h  gnome-canvas-line.c  gnome-canvas-line.h  gnome-canvas-load.c  gnome-canvas-load.h  gnome-canvas-pixbuf.c  (+277 more)
libgnomeui/pixmaps/: .cvsignore  Makefile.am  Makefile.in  calculator-font.xpm  copyright.txt  stock_book_blue.xpm  stock_book_green.xpm  stock_book_open.xpm  stock_book_red.xpm  stock_book_yellow.xpm  stock_button_apply.xpm  stock_button_cancel.xpm  stock_button_close.xpm  stock_button_no.xpm  stock_button_ok.xpm  stock_button_yes.xpm  stock_close.xpm  stock_convert.xpm  stock_copy.xpm  stock_cut.xpm  stock_exit.xpm  stock_first.xpm  stock_help.xpm  stock_home.xpm  stock_jump_to.xpm  stock_last.xpm  stock_left_arrow.xpm  stock_line_in.xpm  stock_mail.xpm  stock_mail_compose.xpm  stock_mail_forward.xpm  stock_mail_receive.xpm  stock_mail_reply.xpm  stock_mail_send.xpm  stock_menu_about.xpm  stock_menu_blank.xpm  stock_mic.xpm  stock_multiple_file.xpm  stock_new.xpm  stock_not.xpm  (+34 more)
po/: .cvsignore  ChangeLog  LINGUAS  POTFILES.in  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gl.po  gu.po  (+70 more)
test-gnome/: .cvsignore  ChangeLog  Makefile.am  Makefile.in  test-password-dialog.c  testdruid.c  testentry.c  testgnome.c  testgnome.h  testgnome.xml  testgnomegdkpixbuf.c  testiconlist.c
tests/: .cvsignore  Makefile.am  test-icon-theme.c  test-libglade-gnome-noupgrade.c  test-libglade-gnome.glade
