AUTOMAKE_OPTIONS = 1.7

DISTCHECK_CONFIGURE_FLAGS = --enable-gtk-doc

SUBDIRS = libgnomeui file-chooser glade images demos test-gnome doc po #tests

EXTRA_DIST = \
	COPYING.LIB		\
	NEWS			\
	intltool-extract.in	\
	intltool-merge.in	\
	intltool-update.in	\
	libgnomeui-zip.in

DISTCLEANFILES = \
	intltool-extract	\
	intltool-merge		\
	intltool-update
