SUBDIRS = libgnomeui glade images demos test-gnome doc po

EXTRA_DIST = \
	COPYING.LIB		\
	NEWS			\
	MAINTAINERS		\
	intltool-extract.in	\
	intltool-merge.in	\
	intltool-update.in	\
	libgnomeui-zip.in

DISTCLEANFILES = \
	intltool-extract	\
	intltool-merge		\
	intltool-update

DISTCHECK_CONFIGURE_FLAGS = --enable-gtk-doc
